--- a/a_4.html
+++ b/a_4.html
@@ -64,7 +64,7 @@
     <div class="contents">
         <div class="tab">
             <div class="tab_title">
-                <h2><a href="#">공지사항</a></h2>
+                <h2 class="on"><a href="#">공지사항</a></h2>
                 <h2><a href="#">갤러리</a></h2>
             </div>
             <div class="tab_contents">
